--- a/popi web/contactos/contactos.html
+++ b/popi web/contactos/contactos.html
@@ -3,9 +3,209 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\santiago\Desktop\popi web\contactos\contactos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Disconnect</title>
+<style>
+	@import url('https://fonts.googleapis.com/css2?family=Lemon&family=Roboto:wght@300&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+* {
+  box-sizing: border-box;
+}
+
+header,
+main,
+footer {
+  overflow: hidden;
+}
+
+body {
+  background-image: url("C:/Users/santiago/Desktop/popi web/fotos/fondo2.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+  font-family: 'Righteous', cursive;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+}
+
+.link {
+  flex: 0.1;
+  width: 15%;
+  height: 100px;
+}
+
+.logo {
+  flex: 0.5;
+  width: 100%;
+  height: 100px;
+  background-image: url("C:/Users/santiago/Desktop/popi web/fotos/logo.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.titulo {
+  flex: 2;
+  text-align: center;
+}
+
+.contenedor {
+  display: grid;
+  grid-template-columns: 66% 33%;
+  grid-gap: 20px;
+  padding: 20px;
+  margin-bottom: 425px;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa {
+  padding: 30px;
+  font-size: 50px;
+  width: 70px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type="submit"] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 10px 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.container {
+  border-radius: 5px;
+  padding: 20px;
+}
+
+footer {
+  color: aliceblue;
+  background-color: #01000a;
+  display: grid;
+  grid-template-columns: 70% 15% 15%;
+}
+
+.foot {
+  width: 100%;
+  height: 100px;
+}
+
+.f1 {
+  display: flex;
+  align-items: center;
+}
+
+.f2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.f3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.columna-1,
+.columna-2 {
+  padding: 10px;
+  width: 100%;
+}
+
+.columna-1 {
+  background-color: #01000a;
+}
+
+.columna-2 {
+  background-color: #01000a;
+  display: grid;
+  grid-template-rows: 80% 20%;
+}
+
+.columna-2 a {
+  color: white;
+  text-decoration: underline;
+}
+
+.columna-2 {
+  color: white;
+}
+
+@media screen and (max-width: 768px) {
+  .link,
+  .logo,
+  .titulo {
+    width: 100%;
+  }
+
+  .logo img {
+    width: 100%;
+    height: auto;
+  }
+
+  .contenedor {
+    grid-template-columns: 100%;
+  }
+
+  .columna-1,
+  .columna-2 {
+    height: auto;
+  }
+  .link {
+    flex: 0.5;
+  }
+}
+</style>
 </head>
 <body>
     <header>
@@ -47,10 +247,6 @@
 				<p>TEL: +54 011 15-3075-4155</p>
 				<p>EMAIL: info@Disconnect.com.ar</p>
 				<a href="meitre.com">RESERVA TU MESA</a>
-			</div>
-				<div class="social">
-				<a href="https://www.instagram.com/disconnect.ar/" class="fa fa-instagram"></a>
-                <a href="#" class="fa fa-facebook"></a>
 			</div>
 			</div>
 		</div>
