--- a/popi web/inicio/inicio.html
+++ b/popi web/inicio/inicio.html
@@ -3,9 +3,170 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\santiago\Desktop\popi web\inicio\inicio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Disconnect</title>
+<style>
+    * {
+  box-sizing: border-box;
+}
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+header,
+main,
+footer {
+  overflow: hidden;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Righteous', cursive;
+  background-image: url("C:/Users/santiago/Desktop/popi web/fotos/fondo2.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+}
+
+.link {
+  flex: 0.1;
+  width: 15%;
+  height: 100px;
+}
+
+.logo {
+  flex: 0.5;
+  width: 100%;
+  height: 100px;
+  background-image: url("C:/Users/santiago/Desktop/popi web/fotos/logo.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.titulo {
+  flex: 2;
+  text-align: center;
+}
+
+.contenedor {
+  display: grid;
+  grid-template-columns: 66% 33%;
+  grid-template-rows: 50% 50%;
+  grid-gap: 20px;
+  padding: 20px;
+  margin-bottom: 218px;
+  height: 1240px;
+}
+
+.menu,
+.trago {
+  width: 100%;
+  height: 600px;
+}
+
+.m1,
+.m3 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.m2,
+.m4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #01000a;
+  color: white;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  font-size: 30px;
+}
+
+.m1 {
+  background-image: url("C:/Users/santiago/Desktop/popi web/fotos/trago4.jpg");
+}
+
+.m3 {
+  background-image: url("C:/Users/santiago/Desktop/popi web/fotos/comidap.jpg");
+}
+
+footer {
+  color: aliceblue;
+  background-color: #01000a;
+  display: grid;
+  grid-template-columns: 70% 15% 15%;
+}
+
+.foot {
+  width: 100%;
+  height: 100px;
+}
+
+.f1 {
+  display: flex;
+  align-items: center;
+}
+
+.f2,
+.f3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa {
+  padding: 30px;
+  font-size: 50px;
+  width: 70px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+@media screen and (max-width: 768px) {
+  .contenedor {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    height: auto;
+  }
+  
+  .menu,
+  .trago {
+    height: 300px;
+  }
+  
+  .m2,
+  .m4 {
+    font-size: 20px;
+  }
+  .link {
+    flex: 0.5;
+  }
+}
+</style>
 </head>
 <body>
     <header>
